[tool.xcookie]
tags = [ "erotemic", "github", "purepy",]
mod_name = "xcookie"
repo_name = "xcookie"
author_email = "erotemic@gmail.com"
author = "Jon Crall"
url = "https://github.com/Erotemic/xcookie"
description = "The xcookie cookie-cutter Module"
min_python = '3.9'
# Reduce the CI load of this package, only test on old and new python versions
#ci_cpython_versions = ['3.7', '3.8', '3.9', '3.10', '3.11', '3.12', '3.13']
#ci_pypy_versions = 'auto'
ci_pypy_versions = []
typed=true

[[tool.xcookie.ci_blocklist]]
os = "*windows*"
python-version = "*rc*"


[tool.xcookie.entry_points]
console_scripts = [
    "xcookie=xcookie.__main__:main",
]
[tool.xcookie.package_data]
xcookie = ['py.typed', '*.pyi']
"xcookie.rc" = ['*.in']

[tool.pytest.ini_options]
addopts = "-p no:doctest --xdoctest --xdoctest-style=google --ignore-glob=setup.py"
norecursedirs = ".git ignore build __pycache__ dev docs _skbuild"
filterwarnings = [
    "default",
    "ignore:.*No cfgstr given in Cacher constructor or call.*:Warning",
    "ignore:.*Define the __nice__ method for.*:Warning",
    "ignore:.*private pytest class or function.*:Warning",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    ".*  # pragma: no cover",
    ".*  # nocover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if trace is not None",
    "verbose = .*",
    "^ *raise",
    "^ *pass *$",
    "if _debug:",
    "if __name__ == .__main__.:",
    ".*if six.PY2:",
]
omit = [
    "xcookie/__main__.py",
    "*/setup.py",
]

[tool.mypy]
# Also should really not need this
ignore_missing_imports = true

[[tool.mypy.overrides]]
# This shoulnt be the case that we need to ignore ubelt. 
module = [
    "ubelt",
]
ignore_missing_imports = true


[tool.codespell]
skip = ['./docs/build', './*.egg-info', './build', './htmlcov']
count = true
quiet-level = 3
ignore-words-list = ['wont', 'cant', 'ANS', 'doesnt', 'arent', 'ans', 'thats', 'datas', 'isnt']

[tool.ty.src]
# tmp
exclude = [
    #'ubelt/util_path.py',
    #'ubelt/util_stream.py'
]

[tool.ruff]
line-length = 80
target-version = "py38"

[tool.ruff.lint]
# Enable Flake8 (E, F) and isort (I) rules.
select = ["E", "F", "I"]
# Ignore specific rules, for example, E501 (line too long) as it's handled by the formatter.
ignore = [
    "E501",  # line too long
    "E402",  # Module level import not at top of file
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false


####################################################
## WIP: Attempt to get xcookie to generate this part
####################################################
#[project]
#name = 'xcookie'
#dynamic = ['version', "dependencies", "optional-dependencies"]
#description = "The xcookie cookie-cutter Module"
#authors = [{ name = "Jon Crall", email = "erotemic@gmail.com" }]
#license = "Apache-2.0"
#requires-python = ">=3.9"
#keywords = ["cookiecutter", "template", "utilities"]
#classifiers = [
#  "Development Status :: 1 - Planning",
#  "Intended Audience :: Developers",
#  "Topic :: Software Development :: Libraries :: Python Modules",
#  "Topic :: Utilities",
#  "License :: OSI Approved :: Apache Software License",
#  "Programming Language :: Python :: 3.7",
#  "Programming Language :: Python :: 3.8",
#  "Programming Language :: Python :: 3.9",
#  "Programming Language :: Python :: 3.10",
#  "Programming Language :: Python :: 3.11",
#  "Programming Language :: Python :: 3.12",
#  "Programming Language :: Python :: 3.13",
#]

#[project.urls]
#Homepage = "https://github.com/Erotemic/xcookie"

#[project.scripts]
#xcookie = "xcookie.__main__:main"

#[tool.setuptools]
#include-package-data = true

#[tool.setuptools.packages.find]
#where = ["."]
#include = ["xcookie*"]

## Package data mirrors your setup.py
#[tool.setuptools.package-data]
#"*" = ["requirements/*.txt"]
#"xcookie" = ["py.typed", "*.pyi"]
#"xcookie.rc" = ["*.in"]

#[tool.setuptools.dynamic]
#version = {attr = "xcookie.__version__"}
#dependencies = {file = ["requirements/runtime.txt"]}
#readme = { file = ["README.rst"], content-type = "text/x-rst" }

#[tool.setuptools.dynamic.optional-dependencies]
#tests = {file = ["requirements/tests.txt"]}
#optional = {file = ["requirements/optional.txt"]}
#docs = {file = ["requirements/docs.txt"]}
