[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=41.0.1",
]

[project]
name = "xcookie"
description = "The xcookie cookie-cutter Module"
license.text = "Apache 2"
authors = [ { name = "Jon Crall", email = "erotemic@gmail.com" } ]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]
dynamic = [
  "dependencies",
  "optional-dependencies",
  "version",
]
urls.Homepage = "https://github.com/Erotemic/xcookie"
scripts.xcookie = "xcookie.__main__:main"

[tool.setuptools]
include-package-data = true
dynamic.dependencies.file = [
  "requirements/runtime.txt",
]
dynamic.optional-dependencies.docs.file = [
  "requirements/docs.txt",
]
dynamic.optional-dependencies.optional.file = [
  "requirements/optional.txt",
]
dynamic.optional-dependencies.tests.file = [
  "requirements/tests.txt",
]
dynamic.readme.file = [
  "README.rst",
]
dynamic.readme.content-type = "text/x-rst"
dynamic.version.attr = "xcookie.__version__"
package-data."*" = [
  "requirements/*.txt",
]
package-data.xcookie = [
  "py.typed",
  "*.pyi",
]
package-data."xcookie.rc" = [
  "*.in",
]
packages.find.where = [
  ".",
]
packages.find.include = [
  "xcookie*",
]

[tool.ruff]
target-version = "py38"
line-length = 80
format.indent-style = "space"
format.quote-style = "single"
format.line-ending = "auto"
format.skip-magic-trailing-comma = false
format.docstring-code-format = false
lint.select = [
  "E",
  "F",
  "I",
]
lint.ignore = [
  "E402",
  "E501",
]

[tool.codespell]
skip = [
  "./docs/build",
  "./*.egg-info",
  "./build",
  "./htmlcov",
]
count = true
quiet-level = 3
ignore-words-list = [
  "wont",
  "cant",
  "ANS",
  "doesnt",
  "arent",
  "ans",
  "thats",
  "datas",
  "isnt",
]

[tool.mypy]
ignore_missing_imports = true
overrides = [ { module = [
  "ubelt",
], ignore_missing_imports = true } ]

[tool.ty]
overrides = [ { include = [
  "xcookie/main.py",
] } ]
rules.unused-type-ignore-comment = "ignore"
rules.unresolved-import = "ignore"
src.exclude = []

[tool.pytest]
ini_options.addopts = "-p no:doctest --xdoctest --xdoctest-style=google --ignore-glob=setup.py --ignore-glob=dev --ignore-glob=docs"
ini_options.norecursedirs = ".git ignore build __pycache__ dev _skbuild docs"
ini_options.filterwarnings = [
  "default",
  "ignore:.*No cfgstr given in Cacher constructor or call.*:Warning",
  "ignore:.*Define the __nice__ method for.*:Warning",
  "ignore:.*private pytest class or function.*:Warning",
]

[tool.coverage]
run.branch = true
report.exclude_lines = [
  ".*  # nocover",
  ".*  # pragma: no cover",
  ".*if six.PY2:",
  "^ *pass *$",
  "^ *raise",
  "def __repr__",
  "if __name__ == .__main__.:",
  "if _debug:",
  "if 0:",
  "if trace is not None",
  "pragma: no cover",
  "raise AssertionError",
  "raise NotImplementedError",
  "verbose = .*",
]
report.omit = [
  "*/setup.py",
  "xcookie/__main__.py",
]

[tool.xcookie]
tags = [
  "erotemic",
  "github",
  "purepy",
]
mod_name = "xcookie"
repo_name = "xcookie"
author_email = "erotemic@gmail.com"
author = "Jon Crall"
url = "https://github.com/Erotemic/xcookie"
description = "The xcookie cookie-cutter Module"
min_python = "3.10"
ci_pypy_versions = []
ci_pypi_trusted_publishing = true
enable_gpg = true
deploy = true
deploy_pypi = true
ci_gpg_secret_transport = "direct_ci"
typed = true
use_setup_py = false
use_pyproject_requirements = false
ci_blocklist = [ { os = "*windows*", python-version = "*rc*" } ]
entry_points.console_scripts = [
  "xcookie=xcookie.__main__:main",
]
package_data.xcookie = [
  "py.typed",
  "*.pyi",
]
package_data."xcookie.rc" = [
  "*.in",
]
